@@ -1,8 +1,8 @@
 Package: stdReg
 Type: Package
 Title: Regression Standardization
-Version: 3.4.0
-Date: 2020-02-24
+Version: 3.4.1
+Date: 2021-05-17
 Author: Arvid Sjolander and Elisabeth Dahlqwist
 Maintainer: Arvid Sjolander <arvid.sjolander@ki.se>
 Description: Contains functionality for regression standardization. Four general classes of models are allowed; generalized linear models, conditional generalized estimating equation models, Cox proportional hazards models and shared frailty gamma-Weibull models. Sjolander, A. (2016) <doi:10.1007/s10654-016-0157-3>.
@@ -10,6 +10,6 @@ License: LGPL (>= 3)
 Imports: graphics, stats, survival, data.table, numDeriv, drgee
 NeedsCompilation: no
 RoxygenNote: 6.0.1
-Packaged: 2020-02-24 09:06:17 UTC; arvsjo
+Packaged: 2021-05-17 06:23:57 UTC; arvsjo
 Repository: CRAN
-Date/Publication: 2020-02-24 10:20:02 UTC
+Date/Publication: 2021-05-17 06:50:03 UTC
