@@ -1,7 +1,7 @@
-d8d6efeb20522a9dcc20ebd96246e838 *DESCRIPTION
+71e764ca661415cc11b7dddd30c5b747 *DESCRIPTION
 3964c28f97144ed8a9f212a9ecbc24f4 *NAMESPACE
-9a8fcc10185a8777173a97bd0833edac *R/sourcecode.R
-9e7d1903da76430fc960c7ceb2df942b *inst/NEWS.Rd
+3833fd3f78bc19476e1f8f8d881974ed *R/sourcecode.R
+f8c6393201c4d74c641cbfe11ca56ade *inst/NEWS.Rd
 87b9df5da549a6893d1fabcfe30e75fb *inst/doc/code.R
 c5f899a5efd513e342d66559fbf9ba35 *man/confint.stdCoxph.Rd
 b69f0a2925b6bd9955541eb4a4009581 *man/confint.stdGee.Rd
